center aligned text, cleaned up code

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <header>
       <div class="bar">
         <a href="#"><img id="w" src="images/logo.png">
-        <h4 class="white" id="wordpress">Wordpress<span style="color:#8CC6E0;">.com</span></h4></a>
-        <a href="#"><p class="white" id="login"> Log In</p></a>
+        <h4 id="wordpress">Wordpress<span style="color:#8CC6E0;">.com</span></h4></a>
+        <a href="#"><p id="login"> Log In</p></a>
       </div>
     </header>
-
       <section class="hero">
         <h1> Create your new website for free </h1>
         <p> WordPress.com is the best place for your personal blog or business site.</p>
@@ -41,52 +40,48 @@
           </div>
         </div>
       </section>
-
   <main>
       <div class="description">
         <h2> WordPress.com is the easiest way to create a free website or blog. It's a powerful hosting platform that grows with you.</h2>
       </div>
       <div class="motherbox">
         <div class= "features">
-          <img class="lightbulb" src="images/lightbulb.png">
+          <img src="images/lightbulb.png">
           <h3> Easy to use</h3>
           <p class="content">WordPress.com lets you create beautiful and powerful websites or blogs.</p>
-          </div>
+        </div>
         <div class= "features">
-          <img class="cloud" src="images/cloud.png">
+          <img src="images/cloud.png">
           <h3> Your own domain name </h3>
           <p class="content">We’ll set up and configure your custom domain so that you can start using it in seconds.</p>
         </div>
         <div class= "features">
-          <img class="code" src="images/code.png">
+          <img src="images/code.png">
           <h3> Search engine and SEO friendly </h3>
           <p class="content">WordPress.com is optimized for SEO and getting your site in front of searchers on Google, Bing, Yahoo, and others.</p>
         </div>
         <div class= "features">
-          <img class="comments" src="images/comments.png">
+          <img src="images/comments.png">
           <h3> The best support </h3>
           <p class="content">Our Happiness Engineers work night and day through live chat, email, support pages, and forums to answer any questions you have.</p></div>
         <div class= "features">
-          <img class="gift" src="images/gift.png">
+          <img src="images/gift.png">
           <h3> Premium plans </h3>
           <p class="content">Our premium plans give you more control with additional customization options. They all come with free trials.</p>
         </div>
         <div class= "features">
-          <img class="globe" src="images/globe.png">
+          <img src="images/globe.png">
           <h3> Millions of users </h3>
           <p class="content">We welcome 50,000 new sites every day. From small business sites, artist portfolios, and blogs, to giant media organizations like TIME and CNN.</p>
         </div>
       </div>
-      <div class="create">
+      <div class="cta">
         <h2> WordPress powers 23% of the internet</h2>
-        <p id="three">
-            Create Website
-        </p>
+        <a id="bottom-create-website-button" href="#">Create Website</a>
       </div>
     </main>
-
     <footer>
-        <ul id="row1">
+        <ul id="links">
           <li> Apps </li>
           <li> Themes</li>
           <li> Support </li>
