cleaned off un-needed <p>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="bar">
         <a href="#"><img id="w" src="images/logo.png">
         <h4 id="wordpress">Wordpress<span style="color:#8CC6E0;">.com</span></h4></a>
-        <a href="#"><p id="login"> Log In</p></a>
+        <a href="#" id="login">Log In</a>
       </div>
     </header>
       <section class="hero">
